test/gpu/native/assertOnNotGpuEligible.1.good
assertOnNotGpuEligible.chpl:15: In function 'funcMarkedNotGpuizableThatTriesToGpuize':
assertOnNotGpuEligible.chpl:17: error: Loop is marked with @gpu.assertEligible but is not eligible for execution on a GPU
assertOnNotGpuEligible.chpl:15: note: parent function disallows execution on a GPU
